# fourbench

./: README.md
4Bench/: .autotools  .cproject  .project  4bench_output  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
4Bench/include/: 4bench.hpp
4Bench/include/conf/: AssignmentDistribution.hpp  Conf.hpp  SourcesDefinition.hpp
4Bench/include/datatypes/: DataType.hpp  DataValue.hpp  DataValueBuilder.hpp
4Bench/include/output/: NQuadsProvenanceDump.hpp  ProvenanceDump.hpp  ProvenanceDumpFactory.hpp  QuadTSVProvenanceDump.hpp
4Bench/include/parsing/: FileParser.hpp  FileParserFactory.hpp  N3FileParser.hpp  ParsingStats.hpp  TSVFileParser.hpp  Triple.hpp
4Bench/include/provenance/: Activity.hpp  Agent.hpp  Entity.hpp  EntityLevel.hpp  FOAF.hpp  GeometricProvenanceAssignment.hpp  IRIBuilder.hpp  IRIType.hpp  PROVO.hpp  PopulateStats.hpp  PowerLawProvenanceAssignment.hpp  ProvenanceAssignment.hpp  ProvenanceAssignmentFactory.hpp  ProvenanceGraph.hpp  ProvenanceGraphBuilder.hpp  ProvenanceGraphFactory.hpp  ProvenanceGraphPopulator.hpp  ProvenanceObject.hpp  ProvenanceSubgraph.hpp  RDF.hpp  RDFS.hpp  UniformProvenanceAssignment.hpp  Vocabulary.hpp  XSD.hpp
4Bench/include/utils/: float.hpp  integer.hpp  string.hpp  time.hpp
4Bench/input/: config_test.ini
4Bench/querygenerator/: pom.xml
4Bench/querygenerator/src/main/java/aau/cs/qweb/fourbench/query/: Config.java  ImprovedOpWalker.java  ProvenancePathsGenerator.java  ProvenanceQueryGenerator.java  QueryGenerator.java
4Bench/querygenerator/src/main/java/aau/cs/qweb/fourbench/query/output/: QueryOutputter.java  QuerySerializer.java  QuerySerializerFactory.java  SPARQLGraphQuerySerializer.java
4Bench/querygenerator/src/main/java/aau/cs/qweb/fourbench/utils/: IdentityHashSet.java  StringUtils.java
4Bench/querygenerator/src/main/resources/: config.ini  test.nq  test.query  test.short.nq
4Bench/querygenerator/src/main/resources/output/: test.queryextended
4Bench/src/: 4Bench.cpp  4BenchQueryGen.cpp  Makefile  Makefile.am  Makefile.in
4Bench/src/conf/: Conf.cpp
4Bench/src/datatypes/: DataType.cpp  DataValue.cpp  DataValueBuilder.cpp
4Bench/src/output/: NQuadsProvenanceDump.cpp  ProvenanceDump.cpp  ProvenanceDumpFactory.cpp  QuadTSVProvenanceDump.cpp
4Bench/src/parsing/: FileParser.cpp  FileParserFactory.cpp  N3FileParser.cpp  ParsingStats.cpp  TSVFileParser.cpp  Triple.cpp
4Bench/src/provenance/: Activity.cpp  Agent.cpp  Entity.cpp  FOAF.cpp  GeometricProvenanceAssignment.cpp  IRIBuilder.cpp  PROVO.cpp  PopulateStats.cpp  PowerLawProvenanceAssignment.cpp  ProvenanceAssignment.cpp  ProvenanceAssignmentFactory.cpp  ProvenanceGraph.cpp  ProvenanceGraphBuilder.cpp  ProvenanceGraphFactory.cpp  ProvenanceGraphPopulator.cpp  ProvenanceObject.cpp  ProvenanceSubgraph.cpp  RDF.cpp  RDFS.cpp  UniformProvenanceAssignment.cpp  Vocabulary.cpp  XSD.cpp
4Bench/src/utils/: float.cpp  integer.cpp  string.cpp  time.cpp
4Bench/test/: Makefile.am  Makefile.in
4Bench/test/parsing/: TSVFileParserTest.cpp
4Bench/test/provenance/: ProvenanceGraphTest.cpp
